@@ -830,6 +830,18 @@ public class TextAreaPainter extends JComponent implements TabExpander
 		}
 	} //}}}
 
+	//{{{ getRenderingHints() method
+	/**
+	 * Returns the rendering hints used by the Graphics2D class; in this
+         * case, for anti-aliasing of text.
+	 *
+	 * @since jEdit 4.5pre1
+	 */
+        public RenderingHints getRenderingHints()
+	{
+            return renderingHints;
+        }
+
 	//{{{ update() method
 	/**
 	 * Repaints the text.
