@@ -7,8 +7,8 @@ jEdit 4.5 version history
 Thanks to Björn "Vampire" Kautler, Matthieu Casanova, Alan Ezust, cy6erGn0m,
 Bad Sector, jclopes, Dale Anson, Anshal Shukla, Ryan Mott, Damien Radtke,
 Matthew Gilbert, Dennis Hotson, Kevin Hunter, encorejane, nherzing, Jeremy,
-Evan Wright, Shlomy Reinstein, glen117, kog13, Marcelo Vanzin and
-Eric Le Lay for contributing to this release.
+Evan Wright, Shlomy Reinstein, glen117, kog13, Marcelo Vanzin, Anthony Keeley
+and Eric Le Lay for contributing to this release.
 
 {{{ Bug fixes
 
@@ -73,6 +73,8 @@ Eric Le Lay for contributing to this release.
 
 }}}
 {{{ API Changes
+- New method TextAreaPainter.getRenderingHints() expose the rendering
+  hints (patch #2973861) (Anthony Keeley)
 
 - Added GUIUtilities.option() method to display a JOptionPane.option()
   dialog (Matthieu Casanova)
